syntax = "proto3";

package spotify.login5.v3;

option go_package = "github.com/devgianlu/go-librespot/proto/spotify/login5/v3";

message ClientInfo {
  string client_id = 1;
  string device_id = 2;
}