syntax = "proto3";

package spotify.connectstate;

message PlayerState {
  int64 timestamp = 1;
  string context_uri = 2;
  string context_url = 3;
  Restrictions context_restrictions = 4;
  PlayOrigin play_origin = 5;
  ContextIndex index = 6;
  ProvidedTrack track = 7;
  string playback_id = 8;
  double playback_speed = 9;
  int64 position_as_of_timestamp = 10;
  int64 duration = 11;
  bool is_playing = 12;
  bool is_paused = 13;
  bool is_buffering = 14;
  bool is_system_initiated = 15;
  ContextPlayerOptions options = 16;
  Restrictions restrictions = 17;
  Suppressions suppressions = 18;
  repeated ProvidedTrack prev_tracks = 19;
  repeated ProvidedTrack next_tracks = 20;
  map<string, string> context_metadata = 21;
  map<string, string> page_metadata = 22;
  string session_id = 23;
  string queue_revision = 24;
  int64 position = 25;
  PlaybackQuality playback_quality = 32;
  repeated string signals = 33;
  string session_command_id = 35;

  reserved 26, 27, 28, 29, 30, 31, 34;
}

message ProvidedTrack {
  string uri = 1;
  string uid = 2;
  map<string, string> metadata = 3;
  repeated string removed = 4;
  repeated string blocked = 5;
  string provider = 6;
  Restrictions restrictions = 7;
  string album_uri = 8;
  repeated string disallow_reasons = 9;
  string artist_uri = 10;
  repeated string disallow_undecided = 11;
}

message ContextIndex {
  uint32 page = 1;
  uint32 track = 2;
}

message ModeRestrictions {
  map<string, RestrictionReasons> values = 1;
}

message RestrictionReasons {
  repeated string reasons = 1;
}

message Restrictions {
  repeated string disallow_pausing_reasons = 1;
  repeated string disallow_resuming_reasons = 2;
  repeated string disallow_seeking_reasons = 3;
  repeated string disallow_peeking_prev_reasons = 4;
  repeated string disallow_peeking_next_reasons = 5;
  repeated string disallow_skipping_prev_reasons = 6;
  repeated string disallow_skipping_next_reasons = 7;
  repeated string disallow_toggling_repeat_context_reasons = 8;
  repeated string disallow_toggling_repeat_track_reasons = 9;
  repeated string disallow_toggling_shuffle_reasons = 10;
  repeated string disallow_set_queue_reasons = 11;
  repeated string disallow_interrupting_playback_reasons = 12;
  repeated string disallow_transferring_playback_reasons = 13;
  repeated string disallow_remote_control_reasons = 14;
  repeated string disallow_inserting_into_next_tracks_reasons = 15;
  repeated string disallow_inserting_into_context_tracks_reasons = 16;
  repeated string disallow_reordering_in_next_tracks_reasons = 17;
  repeated string disallow_reordering_in_context_tracks_reasons = 18;
  repeated string disallow_removing_from_next_tracks_reasons = 19;
  repeated string disallow_removing_from_context_tracks_reasons = 20;
  repeated string disallow_updating_context_reasons = 21;
  repeated string disallow_playing_reasons = 22;
  repeated string disallow_stopping_reasons = 23;
  repeated string disallow_add_to_queue_reasons = 24;
  repeated string disallow_setting_playback_speed_reasons = 25;
  map<string, ModeRestrictions> disallow_setting_modes = 28;
  map<string, RestrictionReasons> disallow_signals = 29;

  reserved 26, 27;
}

message PlayOrigin {
  string feature_identifier = 1;
  string feature_version = 2;
  string view_uri = 3;
  string external_referrer = 4;
  string referrer_identifier = 5;
  string device_identifier = 6;
  repeated string feature_classes = 7;
  optional string restriction_identifier = 8;
}

message ContextPlayerOptions {
  bool shuffling_context = 1;
  bool repeating_context = 2;
  bool repeating_track = 3;
  optional float playback_speed = 4;
  map<string, string> modes = 5;
}

message Suppressions {
  repeated string providers = 1;
}

message InstrumentationParams {
  repeated string interaction_ids = 6;
  repeated string page_instance_ids = 7;
}

message Playback {
  int64 timestamp = 1;
  int32 position_as_of_timestamp = 2;
  double playback_speed = 3;
  bool is_paused = 4;
  ContextTrack current_track = 5;
  optional ContextTrack associated_current_track = 6;
  optional int32 associated_position_as_of_timestamp = 7;
}

message Queue {
  repeated ContextTrack tracks = 1;
  bool is_playing_queue = 2;
}

message Session {
  PlayOrigin play_origin = 1;
  Context context = 2;
  string current_uid = 3;
  ContextPlayerOptionOverrides option_overrides = 4;
  Suppressions suppressions = 5;
  InstrumentationParams instrumentation_params = 6;
  optional string shuffle_seed = 7;
  optional Context main_context = 8;
  optional string original_session_id = 9;
}

message TransferState {
  ContextPlayerOptions options = 1;
  Playback playback = 2;
  Session current_session = 3;
  Queue queue = 4;
}

message ContextTrack {
  string uri = 1;
  string uid = 2;
  bytes gid = 3;
  map<string, string> metadata = 4;
}

message ContextPlayerOptionOverrides {
  bool shuffling_context = 1;
  bool repeating_context = 2;
  bool repeating_track = 3;
  optional float playback_speed = 4;
  map<string, string> modes = 5;
}

message Context {
  string uri = 1;
  string url = 2;
  map<string, string> metadata = 3;
  Restrictions restrictions = 4;
  repeated ContextPage pages = 5;
  bool loading = 6;
}

message ContextPage {
  string page_url = 1;
  string next_page_url = 2;
  map<string, string> metadata = 3;
  repeated ContextTrack tracks = 4;

  reserved 5;
}

message PlaybackQuality {
  BitrateLevel bitrate_level = 1;
  BitrateStrategy strategy = 2;
  BitrateLevel target_bitrate_level = 3;
  bool target_bitrate_available = 4;
  HiFiStatus hifi_status = 5;
}

enum BitrateLevel {
  UNKNOWN_BITRATE_LEVEL = 0;
  LOW = 1;
  NORMAL = 2;
  HIGH = 3;
  VERY_HIGH = 4;
  HIFI = 5;
  HIFI24 = 6;
}

enum BitrateStrategy {
  UNKNOWN_BITRATE_STRATEGY = 0;
  BEST_MATCHING = 1;
  BACKEND_ADVISED = 2;
  OFFLINED_FILE = 3;
  CACHED_FILE = 4;
  LOCAL_FILE = 5;
}

enum HiFiStatus {
  NONE = 0;
  OFF = 1;
  ON = 2;
}
